<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2800BFA5"
    tools:context="com.example.calculator.view.CalculatorActivity">


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="70dp"
        android:columnCount="4"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_display">

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_7"
            android:text="@string/_7" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_8"
            android:text="@string/_8" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_9"
            android:text="@string/_9" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="plusSign"
            android:text="@string/add" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_4"
            android:text="@string/_4" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_5"
            android:text="@string/_5" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_6"
            android:text="@string/_6" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="subtractSign"
            android:text="@string/subtract" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_1"
            android:text="@string/_1" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_2"
            android:text="@string/_2" />


        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_3"
            android:text="@string/_3" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="multiplicationSign"
            android:text="@string/multiply" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="periodNotation"
            android:text="@string/Period" />

        <Button
            style="@style/CalculatorTheme"
            android:onClick="onButtonClicked"
            android:tag="number_0"
            android:text="@string/_0" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="equalSign"
            android:text="@string/equal" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="divisionSign"
            android:text="@string/divide" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="negativeSign"
            android:text="@string/NegativeSign" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:enabled="false" />

        <Button
            style="@style/CalculatorThemeOperators"
            android:onClick="onButtonClicked"
            android:tag="deleteButton"
            android:text="@string/delete" />


        <Button
            style="@style/CalculatorThemeClear"
            android:background="@mipmap/button_clear_foreground"
            android:onClick="onClearDisplay"
            android:tag="clearButton"
            android:text="@string/clear" />

    </GridLayout>

    <LinearLayout
        android:id="@+id/operator_display"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#7200BFA5"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/number_display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/operatordisplay"
            android:layout_width="282dp"
            android:layout_height="match_parent"
            android:gravity="right"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-16dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_display"
        android:layout_width="378dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="27dp"
        android:background="#D000BFA5"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operator_display"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textdisplay"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:gravity="right|center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>